--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:tech-angular-app": "node dist/tech-angular-app/server/server.mjs"
+    "serve:ssr:tech-angular-app": "node dist/tech-angular-app/server/server.mjs",
+    "nodemon":"nodemon -q typescript/TypeScriptTutorial.js",
+    "tsc_nodemon":" tsc --watch nodemon  typescript/TypeScriptTutorial.ts && nodemon -q typescript/TypeScriptTutorial.js"
+
   },
   "private": true,
   "dependencies": {
@@ -21,7 +24,10 @@
     "@angular/platform-server": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.4",
+    "bootstrap": "^5.3.3",
     "express": "^4.18.2",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.7.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
